Correction navigation bar on small screen

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3351,10 +3351,6 @@ input, select, textarea {
 
 		@media screen and (max-width: 736px) {
 
-			#nav {
-				display: none;
-			}
-
 				#nav + #main {
 					padding-top: 0;
 				}
